IGNITE-20730 Fix security suite